# RustyXML

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  checksum-Elixir.RustyCSV.Native.exs  checksum-Elixir.RustyXML.Native.exs  debug_compliance.exs  mix.exs
.github/workflows/: ci.yml  release.yml
bench/: comprehensive_bench.exs  saxy_bench.exs  sweet_bench.exs  xml_bench.exs
bench/results/: 20260126T053102_summary.md  20260126T053809_summary.md  20260126T053942_summary.md  20260126T054217_summary.md  20260126T054939_summary.md  20260126T055113_summary.md  20260126T055247_summary.md  20260126T055421_summary.md  20260126T055555_summary.md  20260126T063348_summary.md  20260126T063944_summary.md  20260126T064310_summary.md  20260126T064858_summary.md  20260126T065820_summary.md
docs/: ARCHITECTURE.md  BENCHMARK.md  COMPLIANCE.md
docs/plans/: 2026-02-16-xpath-namespace-and-stubs-design.md  2026-02-16-xpath-namespace-and-stubs-plan.md
lib/: rusty_xml.ex
lib/rusty_xml/: builder.ex  encoder.ex  event_transformer.ex  handler.ex  native.ex  partial.ex  simple_form.ex  streaming.ex  xml.ex
native/rustyxml/: Cargo.toml
native/rustyxml/src/: lib.rs  resource.rs  term.rs
native/rustyxml/src/core/: attributes.rs  dtd.rs  encoding.rs  entities.rs  mod.rs  scanner.rs  tokenizer.rs  unicode.rs  unified_scanner.rs
native/rustyxml/src/dom/: document.rs  mod.rs  namespace.rs  node.rs  strings.rs
native/rustyxml/src/index/: builder.rs  element.rs  mod.rs  span.rs  structural.rs  view.rs
native/rustyxml/src/reader/: buffered.rs  events.rs  mod.rs  slice.rs
native/rustyxml/src/sax/: collector.rs  events.rs  mod.rs
native/rustyxml/src/strategy/: mod.rs  parallel.rs  streaming.rs
native/rustyxml/src/xpath/: axes.rs  compiler.rs  eval.rs  functions.rs  lexer.rs  mod.rs  parser.rs  value.rs
scripts/: claude-sandbox.sh  download-xmlconf.sh
test/: oasis_conformance_test.exs  rusty_xml_test.exs  streaming_test.exs  xml_conformance_test.exs
