[package]
name = "rustyxml"
version = "0.2.2"
authors = ["Jeff Huen"]
edition = "2021"
rust-version = "1.91"

[lib]
name = "rustyxml"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
# Rustler for NIF bindings
rustler = "0.37"
memchr = "2.7"    # Fast byte searching, uses SIMD when available
lru = "0.12"      # LRU cache for compiled XPath expressions
rayon = "1.10"    # Data parallelism for parallel XPath evaluation
mimalloc = { version = "0.1", default-features = false, optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = { version = "0.1", default-features = false, optional = true, features = ["local_dynamic_tls"] }

[features]
default = ["mimalloc", "memory_tracking"]
mimalloc = ["dep:mimalloc"]
# Enable memory tracking (adds overhead - use only for profiling)
memory_tracking = []
# NIF version features for rustler_precompiled (OTP 24+ = 2.15, OTP 26 = 2.16, OTP 27+ = 2.17)
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

# For development with zero-copy support, override rustler in .cargo/config.toml:
# [patch.crates-io]
# rustler = { git = "https://github.com/rusterlium/rustler", branch = "master" }
